# RAG_Langchain_Japanese

./: .env.example  .gitignore  README.md  pyproject.toml
src/rag_japanese_teacher/: __init__.py
src/rag_japanese_teacher/cli/: main.py
src/rag_japanese_teacher/core/: __init__.py  config.py  models.py
src/rag_japanese_teacher/knowledge/: __init__.py  documents.py
src/rag_japanese_teacher/knowledge_build/: __init__.py  service.py
src/rag_japanese_teacher/phase0/: __init__.py  service.py
src/rag_japanese_teacher/rag/: __init__.py  prompts.py  service.py
