[project]
name = "rag-langchain-japanese"
version = "0.1.0"
description = "Personalized Japanese interview coach powered by LangChain and RAG."
requires-python = ">=3.11"
dependencies = [
  "chromadb>=0.5.0",
  "langchain>=0.2.0",
  "langchain-chroma>=0.1.0",
  "langchain-core>=0.2.0",
  "langchain-ollama>=1.0.0",
  "langchain-openai>=0.1.0",
  "python-dotenv>=1.0.0",
  "rich>=13.0.0",
]

[project.scripts]
jp-teacher = "rag_japanese_teacher.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_japanese_teacher"]
